[package]
authors = ["ringsaturn <ringsaturn.me@gmail.com>"]
edition = "2021"
name    = "tzf-node"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
napi        = "2"
napi-derive = "2"
tzf-rs = { version = "0.4.8", default-features = false }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
